# image-processor

./: .envrc  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  manage.sh  pyproject.toml
.devcontainer/: .env.template  .env_TEMPLATE  .gitignore  Dockerfile  LICENSE  README.md  chezmoi.template  devcontainer.json_TEMPLATE  devcontainer.template.json  package.json  post_create.sh
.github/workflows/: test.yml
dev-cli/: commands.sh  manage.sh  manage.template.sh
image_processor/: .gitignore  Dockerfile  main.py  pyproject.toml
image_processor/image_processor/: cli.py  formats.py  main.py
image_processor/tests/: conftest.py  test_image_processor.py  test_phase1_features.py
isession/: Dockerfile
isession/startup/: 00-init.py
scripts/: commands.sh  manage.sh
